GNOME Bugzilla – Bug 611891
Correct return values on error for programs
Last modified: 2010-03-05 16:12:56 UTC
Makes it easier to use them in shell scripts.
Created attachment 155297 [details] [review] Correct return values on error for programs Most of those programs would return 0 even on error. They should instead return 1 when an error occurred.
Attachment 155297 [details] pushed as 96e9f4b - Correct return values on error for programs