Correct return values on error for programs

Most of those programs would return 0 even on error. They
should instead return 1 when an error occurred.

https://bugzilla.gnome.org/show_bug.cgi?id=611891