programs/gvfs-mkdir.c
@@ -41,6 +41,7 @@ main (int argc, char *argv[])
   GError *error;
   GOptionContext *context;
   GFile *file;
+  int retval = 0;
 
   setlocale (LC_ALL, "");
 
@@ -77,6 +78,7 @@ main (int argc, char *argv[])
 		{
 		  g_printerr (_("Error creating directory: %s\n"), error->message);
 		  g_error_free (error);
+		  retval = 1;
 		}
 	    }
 	  else
@@ -85,11 +87,12 @@ main (int argc, char *argv[])
 		{
 		  g_printerr (_("Error creating directory: %s\n"), error->message);
 		  g_error_free (error);
+		  retval = 1;
 		}
 	      g_object_unref (file);
 	    }
 	}
     }
 
-  return 0;
+  return retval;
 }
